# python-http-clients-benchmark

./: .gitignore  Dockerfile  README.md  analyse_results.py  benchmark.py  ca.crt  ca.key  ca.srl  httpcore_ms-1.0.9-py3-none-any.whl  pyproject.toml  run_suite.py  server.crt  server.csr  server.key  server.py  tasks.py
hypercorn_config/: https1.toml  https2.toml
results/: .gitignore
