[project]
name = "http-client-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "granian>=2.7.1",
    "httpx>=0.28.1",
    "httpx-aiohttp>=0.1.12",
    "invoke>=2.2.1",
    "niquests>=3.17.0",
    "numpy>=2.4.2",
    "pycurl>=7.45.7",
    "pygal>=3.1.0",
    "pyreqwest>=0.11.0",
    "scipy>=1.17.1",
    "trio>=0.33.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = ["ruff>=0.15.2", "ty>=0.0.18"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ASYNC", "B", "I", "A", "SIM"]
