[project]
name = "http-client-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "granian>=2.7.1",
    "httpx[http2]>=0.28.1",
    "httpx-aiohttp>=0.1.12",
    "invoke>=2.2.1",
    "numpy>=2.4.2",
    "pycurl>=7.45.7",
    "pygal>=3.1.0",
    "pyreqwest>=0.11.0",
    "scipy>=1.17.1",
    "trio>=0.33.0",
    "uvloop>=0.22.1",
    "hypercorn>=0.18.0",
    "httpcore-ms",
    "niquests>=3.18.2",
    "requests>=2.32.5",
    "psutil>=7.2.2",
]

[tool.uv]
no-binary-package = ["urllib3-future"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "types-pycurl>=7.45.7.20251101",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ASYNC", "B", "I", "A", "SIM"]

[tool.uv.sources]
httpcore-ms = { path = "httpcore_ms-1.0.9-py3-none-any.whl" }
